# travel-mate-2

./: .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml
backend/app/: main.py
backend/config/: excel_mapping.yaml
backend/services/: excel_export.py  german_travel_rules.py  receipt_pipeline.py
backend/src/: data.ts  server.ts
frontend/: package.json
frontend/src/: App.jsx  styles.css
frontend/src/pages/: Dashboard.tsx  Reimbursements.tsx
migrations/postgresql/: 001_initial_schema.sql
migrations/sqlite/: 001_initial_schema.sql
scripts/: verify_excel_export.py
src/travel_mate/: __init__.py  core.py  db.py  models.py  repositories.py  services.py  ui.py
tests/: test_receipt_update_ownership.py  test_travel_mate.py
